--- a/app/src/main/res/menu/edit_profile_menu.xml
+++ b/app/src/main/res/menu/edit_profile_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/saveIcon"
+        android:id="@+id/saveIconProfile"
         android:icon="@android:drawable/ic_menu_save"
         android:title="Edit"
         app:showAsAction="always" />
