--- a/app/src/main/res/menu/item_details_menu.xml
+++ b/app/src/main/res/menu/item_details_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/editProfileIcon"
+        android:id="@+id/editItemIcon"
         android:icon="@android:drawable/ic_menu_edit"
         android:title="Edit"
         app:showAsAction="always" />
