--- a/app/src/main/res/layout-land/fragment_item_edit.xml
+++ b/app/src/main/res/layout-land/fragment_item_edit.xml
@@ -257,7 +257,7 @@
 
             <Button
                 android:id="@+id/button_edit_date"
-                android:layout_width="42dp"
+                android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:text="@string/btn_str"
                 app:layout_constraintBaseline_toBaselineOf="@id/item_expire_date"
