--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,26 +8,34 @@
     <fragment
         android:id="@+id/nav_itemList"
         android:name="com.example.myapplication.main.ItemListFragment"
-        android:label="My Items"
-        tools:layout="@layout/fragment_itemlist" />
+        android:label="ItemListFragment"
+        tools:layout="@layout/fragment_itemlist" >
+        <action
+            android:id="@+id/action_nav_itemList_to_showProfileFragment"
+            app:destination="@id/showProfileFragment"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
+    </fragment>
     <fragment
         android:id="@+id/showProfileFragment"
         android:name="com.example.myapplication.profile.ShowProfileFragment"
         android:label="My Profile"
         tools:layout="@layout/fragment_show_profile">
         <action
-            android:id="@+id/action_showProfileFragment_to_nav_itemList"
-            app:destination="@id/nav_itemList" />
+            android:id="@+id/action_showProfileFragment_to_editProfileFragment"
+            app:destination="@id/editProfileFragment"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/editProfileFragment"
         android:name="com.example.myapplication.profile.EditProfileFragment"
         android:label="Edit Profile"
-        tools:layout="@layout/fragment_edit_profile">
-        <action
-            android:id="@+id/action_editProfileFragment_to_showProfileFragment"
-            app:destination="@id/showProfileFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_edit_profile" />
     <fragment
         android:id="@+id/itemDetailsFragment"
         android:name="com.example.myapplication.itemFragments.ItemDetailsFragment"
