--- a/app/src/main/res/layout-land/fragment_item_edit.xml
+++ b/app/src/main/res/layout-land/fragment_item_edit.xml
@@ -55,10 +55,11 @@
 
             <EditText
                 android:id="@+id/item_condition_value"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/condition_value"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_condition"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
             <TextView
@@ -76,10 +77,11 @@
 
             <EditText
                 android:id="@+id/item_title_edit"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/title_std"
                 app:layout_constraintBaseline_toBaselineOf="@id/item_title"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/details_value_guideline" />
 
 
@@ -98,12 +100,30 @@
 
             <EditText
                 android:id="@+id/item_price_edit"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/price_val_std"
+                android:imeOptions="actionDone"
                 android:inputType="numberDecimal"
+                android:selectAllOnFocus="true"
+                android:text="@string/price_val_std"
+                android:textColor="#005BA3"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBaseline_toBaselineOf="@id/item_price"
                 app:layout_constraintStart_toStartOf="@id/details_value_guideline" />
+
+            <TextView
+                android:id="@+id/price_currency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="40dp"
+                android:text="@string/currency"
+                android:textColor="#005BA3"
+                android:textSize="20sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/item_price_edit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/item_price_edit" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/details_guideline"
@@ -214,10 +234,11 @@
 
             <EditText
                 android:id="@+id/item_location_value"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/location"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_location_details"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
             <TextView
@@ -249,11 +270,12 @@
 
             <EditText
                 android:id="@+id/item_picture_description_edit"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/description"
-                app:layout_constraintTop_toBottomOf="@id/item_description"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/item_description" />
 
             <Button
                 android:id="@+id/button_edit_date"
