--- a/app/src/main/res/layout/fragment_item_edit.xml
+++ b/app/src/main/res/layout/fragment_item_edit.xml
@@ -48,18 +48,20 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/picture_guideline"
-            app:layout_constraintVertical_bias="1.0">
+            app:layout_constraintVertical_bias="0.0">
 
             <EditText
                 android:id="@+id/item_condition_value"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/condition_value"
                 android:selectAllOnFocus="true"
                 android:singleLine="true"
+                android:text="@string/condition_value"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_condition"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
             <TextView
@@ -68,8 +70,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-medium"
-                android:text="@string/title"
                 android:selectAllOnFocus="true"
+                android:text="@string/title"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/item_price"
                 app:layout_constraintStart_toStartOf="parent"
@@ -80,11 +82,12 @@
                 android:id="@+id/item_title_edit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/title_std"
                 android:selectAllOnFocus="true"
-                android:textSize="20sp"
                 android:singleLine="true"
+                android:text="@string/title_std"
+                android:textSize="20sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/item_title"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/details_value_guideline" />
 
 
@@ -107,10 +110,11 @@
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                 android:inputType="numberDecimal"
-                android:textColor="#005BA3"
                 android:selectAllOnFocus="true"
-                android:textSize="20sp"
                 android:text="@string/price_val_std"
+                android:textColor="#005BA3"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBaseline_toBaselineOf="@id/item_price"
                 app:layout_constraintStart_toStartOf="@id/details_value_guideline" />
 
@@ -118,12 +122,14 @@
                 android:id="@+id/price_currency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="40dp"
                 android:text="@string/currency"
                 android:textColor="#005BA3"
                 android:textSize="20sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_price_edit"
-                android:layout_marginStart="4dp"
-                app:layout_constraintStart_toEndOf="@id/item_price_edit"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/item_price_edit" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/details_guideline"
@@ -229,25 +235,26 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline"
-                app:layout_constraintTop_toBottomOf="@+id/category_spinner"/>
+                app:layout_constraintTop_toBottomOf="@+id/category_spinner" />
 
             <EditText
                 android:id="@+id/item_location_value"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/location"
+                android:imeOptions="actionDone"
                 android:selectAllOnFocus="true"
                 android:singleLine="true"
-                android:imeOptions="actionDone"
+                android:text="@string/location"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_location_details"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
             <TextView
                 android:id="@+id/item_expire_date_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:selectAllOnFocus="true"
                 android:hint="@string/expire_date"
+                android:selectAllOnFocus="true"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_expire_date"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
@@ -276,6 +283,7 @@
                 android:layout_height="wrap_content"
                 android:selectAllOnFocus="true"
                 android:text="@string/description"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/item_description" />
 
