--- a/app/src/main/res/layout/fragment_itemlist_empty.xml
+++ b/app/src/main/res/layout/fragment_itemlist_empty.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,4 +17,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/newAddButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:background="@color/colorLightPrimary"
+        android:backgroundTint="@color/colorLightPrimary"
+        android:text="Create new ad + "
+        app:layout_constraintEnd_toEndOf="@+id/empty_list_msg"
+        app:layout_constraintStart_toStartOf="@+id/empty_list_msg"
+        app:layout_constraintTop_toBottomOf="@+id/empty_list_msg"
+        tools:text="Create new ad" />
 </androidx.constraintlayout.widget.ConstraintLayout>
