--- a/app/src/main/res/layout-land/fragment_item_edit.xml
+++ b/app/src/main/res/layout-land/fragment_item_edit.xml
@@ -73,23 +73,27 @@
                 app:layout_constraintBottom_toTopOf="@+id/item_price"
                 app:layout_constraintStart_toStartOf="@id/fieldsGuideline"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="spread" />
+                app:layout_constraintVertical_chainStyle="spread_inside" />
 
             <EditText
                 android:id="@+id/item_title_edit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="13dp"
+                android:inputType="textMultiLine"
                 android:text="@string/title_std"
-                app:layout_constraintBaseline_toBaselineOf="@id/item_title"
+                app:layout_constraintBottom_toTopOf="@+id/item_price_edit"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/details_value_guideline" />
+                app:layout_constraintStart_toStartOf="@id/details_value_guideline"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="spread_inside" />
 
 
             <TextView
                 android:id="@+id/item_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/price"
                 android:textColor="#005BA3"
@@ -108,9 +112,11 @@
                 android:text="@string/price_val_std"
                 android:textColor="#005BA3"
                 android:textSize="20sp"
-                app:layout_constraintBaseline_toBaselineOf="@id/item_price"
+                app:layout_constraintBottom_toTopOf="@+id/details_guideline"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/details_value_guideline" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@id/details_value_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/item_title_edit" />
 
             <TextView
                 android:id="@+id/price_currency"
